5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1709_3061.log
== TEST (2019-05-02 11:14:28) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(x)
	print(z)
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(x)
	print(z)
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(x)
	print(z)
else:
	print("Entrada invalida")
-- OUTPUT:
AEREO
14.166666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:14:40) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(x)
	print(z)
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(x)
	print(z)
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(x)
	print(z)
else:
	print("Entrada invalida")
-- OUTPUT:
AEREO
14.166666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:14:45) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(x)
	print(z)
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(x)
	print(z)
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(x)
	print(z)
else:
	print("Entrada invalida")
-- OUTPUT:
AEREO
14.166666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:15:33) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	print(z)
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	print(z)
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	print(z)
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14.166666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:15:43) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	print(z)
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	print(z)
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	print(z)
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14.166666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:51) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = float(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	print(int(z))
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	print(int(z))
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	print(int(z))
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:17:07) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = float(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	print(int(z))
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	print(int(z))
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	print(int(z))
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:18:00) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = float(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	print(int(z))
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	print(int(z))
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	print(int(z))
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:19:32) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = float(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	print(int(z))
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	print(int(z))
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	print(int(z))
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:19:44) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = float(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	print(int(z))
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	print(int(z))
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	print(int(z))
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:19:57) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = float(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	print(int(z))
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	print(int(z))
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	print(int(z))
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.159537
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
14
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
0
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:20:12) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = float(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	print(int(z))
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	print(z)
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	print(z)
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14.166666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:24:59) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	if(x<150):
		z1 = z +1
		print(z1)
	elif(x>=150):
		print(z)
	
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	if(x<30):
		z1 = z + 1
		print(z1)
	elif(x>=30):
		print(z)
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	if(x<40):
		z1 = z + 1 
		print(z1)
	elif(x>=40)
		print(z)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 32
    elif(x>=40)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:25:08) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	if(x<150):
		z1 = z +1
		print(z1)
	elif(x>=150):
		print(z)
	
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	if(x<30):
		z1 = z + 1
		print(z1)
	elif(x>=30):
		print(z)
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	if(x<40):
		z1 = z + 1 
		print(z1)
	elif(x>=40):
		print(z)
else:
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    if(x<30):
TypeError: '<' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:26:18) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	if(y<150):
		z1 = z +1
		print(z1)
	elif(y>=150):
		print(z)
	
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	if(y<30):
		z1 = z + 1
		print(z1)
	elif(x>=30):
		print(z)
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	if(y<40):
		z1 = z + 1 
		print(z1)
	elif(y>=40):
		print(z)
else:
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    elif(x>=30):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:27:39) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	if(y<150):
		z1 = z +1
		print(int(z1))
	elif(y>=150):
		print(int(z))
	
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	if(y<30):
		z1 = z + 1
		print(int(z1))
	elif(x>=30):
		print(int(z))
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	if(y<40):
		z1 = z + 1 
		print(int(z1))
	elif(y>=40):
		print(int(z))
else:
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    elif(x>=30):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:27:49) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	if(y<150):
		z1 = z +1
		print(int(z1))
	elif(y>=150):
		print(int(z))
	
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	if(y<30):
		z1 = z + 1
		print(int(z1))
	elif(x>=30):
		print(int(z))
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	if(y<40):
		z1 = z + 1 
		print(int(z1))
	elif(y>=40):
		print(int(z))
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.149422
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1709/3061/main.py", line 22, in <module>
    elif(x>=30):
TypeError: unorderable types: str() >= int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:28:09) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	if(y<150):
		z1 = z +1
		print(int(z1))
	elif(y>=150):
		print(int(z))
	
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	if(y<30):
		z1 = z + 1
		print(int(z1))
	elif(x>=30):
		print(int(z))
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	if(y<40):
		z1 = z + 1 
		print(int(z1))
	elif(y>=40):
		print(int(z))
else:
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    elif(x>=30):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:28:21) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	if(y<150):
		z1 = z +1
		print(int(z1))
	elif(y>=150):
		print(int(z))
	
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	if(y<30):
		z1 = z + 1
		print(int(z1))
	elif(x>=30):
		print(int(z))
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	if(y<40):
		z1 = z + 1 
		print(int(z1))
	elif(y>=40):
		print(int(z))
else:
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    elif(x>=30):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:30:12) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	if(y<150):
		z1 = z +1
		print(int(z1))
	elif(y>=150):
		print(int(z))
	
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	if(y<30):
		z1 = z + 1
		print(int(z1))
	elif(y>=30):
		print(int(z))
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	if(y<40):
		z1 = z + 1 
		print(int(z1))
	elif(y>=40):
		print(int(z1))
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:30:16) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	if(y<150):
		z1 = z +1
		print(int(z1))
	elif(y>=150):
		print(int(z))
	
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	if(y<30):
		z1 = z + 1
		print(int(z1))
	elif(y>=30):
		print(int(z))
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	if(y<40):
		z1 = z + 1 
		print(int(z1))
	elif(y>=40):
		print(int(z1))
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:30:30) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	if(y<150):
		z1 = z +1
		print(int(z1))
	elif(y>=150):
		print(int(z))
	
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	if(y<30):
		z1 = z + 1
		print(int(z1))
	elif(y>=30):
		print(int(z))
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	if(y<40):
		z1 = z + 1 
		print(int(z1))
	elif(y>=40):
		print(int(z1))
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:31:49) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	if(y<150):
		z1 = z + 1
		print(int(z1))
	elif(y>=150):
		z1 = z + 1 
		print(int(z))
	
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	if(y<30):
		z1 = z + 1
		print(int(z1))
	elif(y>=30):
		z1 = z + 1
		print(int(z1))
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	if(y<40):
		z1 = z + 1 
		print(int(z1))
	elif(y>=40):
		z1 = z + 1
		print(int(z1))
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:31:54) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	if(y<150):
		z1 = z + 1
		print(int(z1))
	elif(y>=150):
		z1 = z + 1 
		print(int(z))
	
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	if(y<30):
		z1 = z + 1
		print(int(z1))
	elif(y>=30):
		z1 = z + 1
		print(int(z1))
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	if(y<40):
		z1 = z + 1 
		print(int(z1))
	elif(y>=40):
		z1 = z + 1
		print(int(z1))
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:32:47) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	if(y<150):
		z1 = z + 1
		print(int(z1))
	elif(y>=150):
		z1 = z + 1 
		print(int(z))
	
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	if(y<30):
		z1 = z + 1
		print(int(z1))
	elif(y>=30):
		z1 = z + 1
		print(int(z1))
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	if(y<40):
		z1 = z + 1 
		print(int(z1))
	elif(y>=40):
		z1 = z + 1
		print(int(z1))
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:33:15) 
-- CODE:
x = input("digite o tipo de ataque: ").upper()
y = int(input("digite quantas unidades: "))
if(x == "TERRESTRE")and(y>0):
	dragao = "DROGON"
	baforada = 150
	z = y/baforada
	print(dragao)
	if(y<150):
		z1 = z + 1
		print(int(z1))
	elif(y>=150):
		z1 = z + 1 
		print(int(z))
	
elif(x == "AEREO")and(y>0):
	dragao = "RHAEGAL"
	baforada = 30
	z = y/baforada
	print(dragao)
	if(y<30):
		z1 = z + 1
		print(int(z1))
	elif(y>=30):
		z1 = z + 1
		print(int(z1))
elif(x == "MARITIMO")and(y>0):
	dragao = "VISERION"
	baforada = 40
	z = y/baforada
	print(dragao)
	if(y<40):
		z1 = z + 1 
		print(int(z1))
	elif(y>=40):
		z1 = z + 1
		print(int(z1))
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.148871
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
15
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
1
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
12
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
